--- a/index.html
+++ b/index.html
@@ -138,25 +138,140 @@
             </div>
           </section>
           <section class="lg:mt-24 mt-5">
+            <!-- Our New Products -->
             <div class="text-center lg:mt-2 my-40 border-y-2 py-8 border-dotted ">
                 <h1 class="lg:text-4xl text-xl font-extrabold">Our New Products</h1>
                 <p class="lg:w-1/2  mx-auto pt-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
                 
             </div>
 
-            <div>
+            <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
                 <div>
-                    <div class="hero  bg-base-200">
+                    <div class="hero  border-2 rounded-2xl">
                         <div class="hero-content flex-col lg:flex-row">
                           <img src="B9A3-Hockeys-main/Images/5.png" />
                           <div>
-                            <h1 class="text-5xl font-bold">Box Office News!</h1>
-                            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                            <button class="btn btn-primary">Get Started</button>
+                            <div class="flex gap-4">
+                               <p><i class="fa-solid fa-star text-yellow-300"></i> 5.0</p> 
+                               <p><i class="fa-regular fa-eye"></i> 20</p>
+                               <p><i class="fa-regular fa-heart"></i> 200</p>
+                            </div>
+                            <h1 class="text-xl  font-extrabold  "> Hockeys Jacket</h1>
+                            <p class="font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="flex gap-4">
+                                <p class="text-red-600 font-extrabold">Price - $22.00</p>
+                                <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                            </div>
                           </div>
                         </div>
                       </div>
                 </div>
+
+                <div>
+                    <div class="hero  border-2 rounded-2xl">
+                        <div class="hero-content flex-col lg:flex-row">
+                          <img src="B9A3-Hockeys-main/Images/6.png" />
+                          <div>
+                            <div class="flex gap-4">
+                               <p><i class="fa-solid fa-star text-yellow-300"></i> 5.0</p> 
+                               <p><i class="fa-regular fa-eye"></i> 20</p>
+                               <p><i class="fa-regular fa-heart"></i> 200</p>
+                            </div>
+                            <h1 class="text-xl  font-extrabold  "> Hockeys Jacket</h1>
+                            <p class="font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="flex gap-4">
+                                <p class="text-red-600 font-extrabold">Price - $22.00</p>
+                                <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+                <div>
+                    <div class="hero  border-2 rounded-2xl">
+                        <div class="hero-content flex-col lg:flex-row">
+                          <img src="B9A3-Hockeys-main/Images/7.png" />
+                          <div>
+                            <div class="flex gap-4">
+                               <p><i class="fa-solid fa-star text-yellow-300"></i> 5.0</p> 
+                               <p><i class="fa-regular fa-eye"></i> 20</p>
+                               <p><i class="fa-regular fa-heart"></i> 200</p>
+                            </div>
+                            <h1 class="text-xl  font-extrabold  "> Hockeys Jacket</h1>
+                            <p class="font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="flex gap-4">
+                                <p class="text-red-600 font-extrabold">Price - $22.00</p>
+                                <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+                <div>
+                    <div class="hero  border-2 rounded-2xl">
+                        <div class="hero-content flex-col lg:flex-row">
+                          <img src="B9A3-Hockeys-main/Images/8.png" />
+                          <div>
+                            <div class="flex gap-4">
+                               <p><i class="fa-solid fa-star text-yellow-300"></i> 5.0</p> 
+                               <p><i class="fa-regular fa-eye"></i> 20</p>
+                               <p><i class="fa-regular fa-heart"></i> 200</p>
+                            </div>
+                            <h1 class="text-xl  font-extrabold  "> Hockeys Jacket</h1>
+                            <p class="font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="flex gap-4">
+                                <p class="text-red-600 font-extrabold">Price - $22.00</p>
+                                <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+                <div>
+                    <div class="hero  border-2 rounded-2xl">
+                        <div class="hero-content flex-col lg:flex-row">
+                          <img src="B9A3-Hockeys-main/Images/9.png" />
+                          <div>
+                            <div class="flex gap-4">
+                               <p><i class="fa-solid fa-star text-yellow-300"></i> 5.0</p> 
+                               <p><i class="fa-regular fa-eye"></i> 20</p>
+                               <p><i class="fa-regular fa-heart"></i> 200</p>
+                            </div>
+                            <h1 class="text-xl  font-extrabold  "> Hockeys Jacket</h1>
+                            <p class="font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="flex gap-4">
+                                <p class="text-red-600 font-extrabold">Price - $22.00</p>
+                                <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+                <div>
+                    <div class="hero  border-2 rounded-2xl">
+                        <div class="hero-content flex-col lg:flex-row">
+                          <img src="B9A3-Hockeys-main/Images/10.png" />
+                          <div>
+                            <div class="flex gap-4">
+                               <p><i class="fa-solid fa-star text-yellow-300"></i> 5.0</p> 
+                               <p><i class="fa-regular fa-eye"></i> 20</p>
+                               <p><i class="fa-regular fa-heart"></i> 200</p>
+                            </div>
+                            <h1 class="text-xl  font-extrabold  "> Hockeys Jacket</h1>
+                            <p class="font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="flex gap-4">
+                                <p class="text-red-600 font-extrabold">Price - $22.00</p>
+                                <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
             </div>
           </section>
 
