--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <section>
             <div class="text-center lg:mt-2 mt-40 border-y-2 py-8 border-dotted ">
               <h1 class="lg:text-4xl text-xl font-extrabold">Clients Question</h1>
-              <p class="lg:w-1/2  mx-auto pt-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+              <p class="lg:w-1/2  mx-auto pt-6">Some of your common questions are answered below , We try to help you in every way So that you can easily answer all the questions</p>
               
           </div>
             <div class="hero min-h-screen ">
@@ -327,7 +327,7 @@
                       Our Equipment
                     </div>
                     <div class="collapse-content"> 
-                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                      <p>In the ever-evolving landscape of technology and innovation, the role of advanced equipment cannot be overstated.</p>
                     </div>
                   </div>
                   <div class="collapse collapse-plus bg-base-200">
@@ -336,7 +336,7 @@
                       Hockey Training
                     </div>
                     <div class="collapse-content"> 
-                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna</p>
+                      <p>"Hockey training integrates skill development, cardiovascular conditioning, and strategic drills to enhance players',</p>
                     </div>
                   </div>
 
@@ -346,7 +346,7 @@
                       Private Lessons
                     </div>
                     <div class="collapse-content"> 
-                      <p>hello</p>
+                      <p>Private lessons offer personalized guidance, accelerating skill development and fostering confidence in.</p>
                     </div>
                   </div>
 
@@ -356,7 +356,8 @@
                       Ski Touring
                     </div>
                     <div class="collapse-content"> 
-                      <p>hello</p>
+                      <p>
+                        "Ski touring combines the thrill of downhill skiing with the adventure of exploring unmarked, backcountry terrains</p>
                     </div>
                   </div>
                   <div class="collapse collapse-plus bg-base-200">
@@ -365,7 +366,8 @@
                       Booking
                     </div>
                     <div class="collapse-content"> 
-                      <p>hello</p>
+                      <p>
+                        "Booking simplifies the process, ensuring seamless reservations for travel, accommodations, events,and services with</p>
                     </div>
                   </div>
                 
@@ -382,7 +384,7 @@
           <section class="lg:my-24 py-5">
             <div class="text-center lg:mt-2 my-40 border-y-2 py-8 border-dotted ">
               <h1 class="lg:text-4xl text-xl font-extrabold">Our New Products</h1>
-              <p class="lg:w-1/2  mx-auto pt-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>   
+              <p class="lg:w-1/2  mx-auto pt-6">Our new products showcase innovation, quality, and versatility, meeting evolving needs and exceeding expectations in style and functionality </p>   
           </div>
 
           <div class="grid gap-6  lg:grid-cols-3 grid-cols-1">
@@ -484,7 +486,7 @@
           <div class="flex lg:flex-row flex-col gap-3  justify-around items-center lg:text-start text-center">
             <div class="text-white lg:w-[25%] ">
               <h2 class="text-2xl pb-4 ">Get In Touch</h2>
-              <p class="lg:w-3/6 w-full pb-6 text-[#FFFFFF99] ">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+              <p class="lg:w-3/6 w-full pb-6 text-[#FFFFFF99] ">Get in touch for personalized assistance and prompt support, ensuring your inquiries are addressed with care and efficiency..</p>
               <p class="text-[#FFFFFF99]"><i class="fa-solid fa-envelope text-red-500 pr-2"></i> hockeys@support.com</p>
               <p class="text-[#FFFFFF99]"><i class="fa-solid fa-phone text-red-500 pr-2"></i> (+62) 123-321-543</p>
 
