--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
           <!-- Get In Touch  -->
           <section class="lg:my-24 py-5">
             <div class="text-center lg:mt-2 my-40 border-y-2 py-8 border-dotted ">
-              <h1 class="lg:text-4xl text-xl font-extrabold">Our New Products</h1>
-              <p class="lg:w-1/2  mx-auto pt-6">Our new products showcase innovation, quality, and versatility, meeting evolving needs and exceeding expectations in style and functionality </p>   
+              <h1 class="lg:text-4xl text-xl font-extrabold">Get In Touch</h1>
+              <p class="lg:w-1/2  mx-auto pt-6">Get in touch for personalized assistance and prompt support, ensuring your inquiries are addressed with care and efficiency. </p>   
           </div>
 
           <div class="grid gap-6  lg:grid-cols-3 grid-cols-1">
